# CppTests

./: .gitignore  CMakeLists.txt  CppTests.sln  Menu.cpp  README.md  build.cmake  build_xcode.cmake
Classes/: Solution1.cpp  TestSolutions.h
Classes/Algorithms/: RandomAlgorithms.cpp  StandardAlgorithms.h
Classes/Algorithms/Simple/: ReverseBTree.h
Classes/Containers/: HashMap.h
CppTests/: CppTests.vcxproj  CppTests.vcxproj.filters
CppTests/MainApp.xcodeproj/: project.pbxproj
CppTests/src/: Main.cpp  Menu.cpp  Menu.h
CppTests/src/Classes/: Solution1.cpp  Solution1.h  Solution2.cpp  Solution2.h  TestSolutions.cpp
CppTests/src/Classes/Algorithms/: AlgorithmTests.cpp  AlgorithmTests.h  NIAlgorithm.h  RandomAlgorithms.cpp  (+2 more)
cmake/: googletest_download.cmake  setup_gtest.cmake
core/: CMakeLists.txt
core/src/patterns/: Composite.cpp  Decorator.cpp  Observer.cpp  Strategy.cpp
core/src/solutions/: Solution1.cpp  Solution2.cpp  TestSolutions.cpp
core/src/testable/: TestFactory.cpp
core/src/threading/: ProducerConsumer.cpp
test/: CMakeLists.txt
test/algorithms/: GraphAlgorithmsTest.cpp  RandomAlgorithmsTest.cpp  StandardAlgorithmsTest.cpp
test/cctyle/: CCtyleTest.cpp
test/containers/: ContainersTest.cpp
test/cpp20/: ConceptsTest.cpp  FeaturesTest.cpp
test/patterns/: CompositeTest.cpp  DecoratorTest.cpp  ObserverTest.cpp  SingletonTest.cpp  StrategyTest.cpp
test/smart_pointers/: SharedPtrTest.cpp  UniquePtrTest.cpp
test/testable/: TestFactoryTest.cpp
test/threading/: ProducerConsumerTest.cpp  ThreadTest.cpp
test/utils/: TestUtils.h
(+42 files in other folders)
